--- a/NotesOnBand/NotesOnBand/Controls/BandControl.xaml
+++ b/NotesOnBand/NotesOnBand/Controls/BandControl.xaml
@@ -25,12 +25,12 @@
 
         <!--Band 2 : 99,70,102,67-->
         <!--Band 1 : 99,75,102,72-->
-        <Grid Background="White" Margin="99,75,102,72">
+        <Grid x:Name="BandScreenGrid" Background="White" Margin="{Binding CurrentBandGridMargin, Mode=TwoWay}">
 
 
         </Grid>
 
-        <Grid>
+        <Grid x:Name="BandOverlayGrid">
             <Image Source="{Binding BandImage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         </Grid>
 
