--- a/NotesOnBand/NotesOnBand/SampleData/BandControlViewModelSampleData.xaml
+++ b/NotesOnBand/NotesOnBand/SampleData/BandControlViewModelSampleData.xaml
@@ -1,6 +1,7 @@
 ﻿<Controls:BandControlViewModel
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:Controls="using:NotesOnBand.Controls" 
+    xmlns:Controls="using:NotesOnBand.Controls"
+    xmlns:BandEngine="using:NotesOnBandEngine.Models"
     Version="MicrosoftBand2"
     CurrentBandGridMargin="99,70,102,67">
 
@@ -10,5 +11,14 @@
     <Controls:BandControlViewModel.BandImage>
         <BitmapImage UriSource="/Assets/Band2.png"></BitmapImage>
     </Controls:BandControlViewModel.BandImage>
-    
+
+    <Controls:BandControlViewModel.Notes>
+        <BandEngine:BandNote Content="Nam sed" Title="Cras dis"></BandEngine:BandNote>
+        <BandEngine:BandNote Content="Est duis" Title="Aliquam hac"></BandEngine:BandNote>
+        <BandEngine:BandNote Content="Class nunc" Title="Leo curabitur"></BandEngine:BandNote>
+        <BandEngine:BandNote Content="Maecenas praesent aenean vestibulum" Title="Integer accumsan"></BandEngine:BandNote>
+        <BandEngine:BandNote Content="Quisque phasellus mauris" Title="Nullam adipiscing"></BandEngine:BandNote>
+        <BandEngine:BandNote Content="Curae amet" Title="Mus nec donec ante etiam"></BandEngine:BandNote>
+        
+    </Controls:BandControlViewModel.Notes>
 </Controls:BandControlViewModel>
