Change Band background for Band 1. Fixed the issue with the text being invisible on the white theme. Also the text font size now are 12 , which better represent the wrapping on the Band

--- a/NotesOnBand/NotesOnBand/Controls/BandControl.xaml
+++ b/NotesOnBand/NotesOnBand/Controls/BandControl.xaml
@@ -54,13 +54,14 @@
                                            RelativePanel.AlignTopWithPanel="True"           
                                            RelativePanel.AlignLeftWithPanel="True"                
                                            Text="{Binding Title}"
-                                           FontSize="11"></TextBlock>
+                                           FontSize="12"></TextBlock>
 
                                     <TextBlock RelativePanel.Below="TitleTextBlock"       
                                            RelativePanel.AlignLeftWithPanel="True"    
                                            Text="{Binding Content}"
                                            TextWrapping="Wrap"
-                                           FontSize="11"></TextBlock>
+                                           FontSize="12"
+                                               Foreground="White"></TextBlock>
                                 </RelativePanel>
                             </ScrollViewer>
                         </Grid>
